<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    android:padding="25dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageView
            android:src="@drawable/logo3"
            android:layout_width="150dp"
            android:layout_height="150dp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <EditText
            android:textSize="15sp"
            android:id="@+id/etusername"
            android:textColor="@color/grey"
            android:inputType="text"
            android:hint="Username"
            android:paddingLeft="30dp"
            android:textColorHint="@color/lightGrey"
            android:background="@drawable/login_edittext"
            android:layout_width="match_parent"
            android:layout_height="45dp" />
        <EditText
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/etpassword"
            android:textColor="@color/grey"
            android:inputType="textPassword"
            android:hint="Password"
            android:paddingLeft="30dp"
            android:textColorHint="@color/lightGrey"
            android:background="@drawable/login_edittext"
            android:layout_width="match_parent"
            android:layout_height="45dp" />
        <Button
            android:id="@+id/btnlogin"
            android:text="login"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/login_button"
            android:layout_width="match_parent"
            android:layout_height="45dp" />
        <TextView
            android:id="@+id/tvregister"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:gravity="center"
            android:text="new user register here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        />

</RelativeLayout>
