...
                    android:layout_weight="1"
                    android:text="today"
                    android:textAllCaps="true"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btnchange"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/snowgrey2"
                    android:fontFamily="sans-serif-condensed"
                    android:text="change"
                    android:textColor="@color/snowwhite" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
...
